--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "./node_modules/.bin/mocha --reporter spec"
     },
     "repository": {
         "type": "git",
@@ -20,5 +20,10 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-validator": "^6.6.1"
+    },
+    "devDependencies": {
+        "chai": "^4.2.0",
+        "chai-http": "^4.3.0",
+        "mocha": "^8.1.3"
     }
 }
